# LAGZero

App/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.972fdfc  CMakeLists.txt.user.f6677f6  RTSSSharedMemory.h  apimanager.cpp  apimanager.h  appconstants.h  clickablelabel.cpp  clickablelabel.h  coverselectiondialog.cpp  coverselectiondialog.h  cputemperature.cpp  cputemperature.h  databasemanager.cpp  databasemanager.h  fpsmonitor.cpp  fpsmonitor.h  gamecoverwidget.cpp  gamecoverwidget.h  gamelistitemwidget.ui  glasswidget.cpp  glasswidget.h  hardwaremonitor.cpp  hardwaremonitor.h  infocardwidget.cpp  infocardwidget.h  launchermanager.cpp  launchermanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  particleswidget.cpp  particleswidget.h  performancechartwidget.cpp  performancechartwidget.h  recursos.qrc  resources.qrc  (+11 more)
App/helper/: TempReader.cs  log.txt
Site/: index.html  script.js  styles.css
